same image new GHCR work flow

--- a/k_deployment/traefik_ingress.yaml
+++ b/k_deployment/traefik_ingress.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   entryPoints:
     - websecure
+    - web
   routes:
     - match: Host(`whoami.learningreliability.site`)
       kind: Rule
